Add test with secondary source